--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 html, body {
-  width: 100%;
-  height: 100%;
   margin: 0px;
   padding: 0px;
-  font-family: monospace;
+  width: 100%;
+  height: 100%;
+  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 #tv {
